[Fixes #6332] In home page show only ISO categories currently assigned to some dataset (#6333) : Fix iso format overflow
(cherry picked from commit f8746ad3f9f45455a8f48e1dda08fe5a442e183e)

--- a/geonode/static/geonode/less/base.less
+++ b/geonode/static/geonode/less/base.less
@@ -1760,6 +1760,10 @@ form-inline {
   justify-content: center;
   .col-lg-1 {
     margin-right: 1%;
+    .category h4 {
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
   span {
     font-size: 0.7em !important;
